[tool.poetry]
name = "dc_gym"
version = "0.0.1"
description = "Iroko is an open source project that is focused on providing openAI compliant gyms. The aim is to develop machine learning algorithms that address data center problems and to fairly evaluate solutions again traditional techniques."

license = "Apache-2.0"

authors = [
    "Fabian Ruffy",
    "Michael Przystupa",
    "Ivan Beschastnikh"
]

readme = 'README.md'

repository = "https://github.com/dc_gym/iroko"
homepage = "https://github.com/dc_gym/iroko"

keywords = ['tcp', 'congestion control', 'reinforcement learning', 'rl', 'data center']

[tool.poetry.dependencies]
python = ">=3.6"  # Compatible python versions
toml = "^0.9"

# DCgym dependencies
numpy = { version = "*", python = ">=3.5"}
pandas = { version = "*", python = ">=3.5"}
gym = { version = ">=0.12.1", python = ">=3.5"}
seaborn = { version = "*", python = ">=3.5"}
matplotlib = { version = "*", python = ">=3.5"}
gevent = { version = "*", python = ">=3.5"}

# Ray dependencies
opencv-python = { version = "*", python = ">=3.5"}
tabulate = { version = "*", python = ">=3.5"}
# tensorflow 2.0 is causing install issues, disable and install manually
# tensorflow = { version = ">=2.0", python = ">=3.5"}
# tensorflow-probability = { version = "*", python = ">=3.5"}
lz4 = { version = "*", python = ">=3.5"}
psutil = { version = "*", python = ">=3.5"}
setproctitle = { version = "*", python = ">=3.5"}
