[tool.poetry]
name = "dc_gym"
version = "0.0.1"
description = "Iroko is an open source project that is focused on providing openAI compliant gyms. The aim is to develop machine learning algorithms that address data center problems and to fairly evaluate solutions again traditional techniques."

license = "Apache-2.0"

authors = [
    "Fabian Ruffy",
    "Michael Przystupa",
    "Ivan Beschastnikh"
]

readme = 'README.md'

repository = "https://github.com/dc_gym/iroko"
homepage = "https://github.com/dc_gym/iroko"

keywords = ['tcp', 'congestion control', 'reinforcement learning', 'rl', 'data center']

[tool.poetry.dependencies]
python = ">=3.6.1"  # Compatible python versions
toml = "^0.9"

# DCgym dependencies
numpy = { version = "1.17.*", python = ">=3.6.1"}
pandas = { version = "1.1.*", python = ">=3.6.1"}
gym = { version = "0.12.*", python = ">=3.6.1"}
seaborn = { version = "0.11.*", python = ">=3.6.1"}
matplotlib = { version = "3.3.**", python = ">=3.6.1"}
gevent = { version = "21.1.*", python = ">=3.6.1"}

# Ray dependencies
ray = { version = "1.3.*", python = ">=3.6.1"}
opencv-python = { version = "4.5.*", python = ">=3.6.1"}
tabulate = { version = "0.8.*", python = ">=3.6.1"}
dm-tree = { version = "0.1.6", python = ">=3.6.1"}
tensorflow-probability = { version = "0.12.*", python = ">=3.6.1"}
tensorboardX = { version = "2.2", python = ">=3.6.1"}
tensorflow = { version = "2.2.*", python = ">=3.6.1"}
absl-py = { version = "0.12", python = ">=3.6.1"}
lz4 = { version = "3.1", python = ">=3.6.1"}
psutil = { version = "5.7.*", python = ">=3.6.1"}
setproctitle = { version = "1.1.*", python = ">=3.6.1"}
