[tool.poetry]
name = "dc_gym"
version = "0.0.1"
description = "Iroko is an open source project that is focused on providing openAI compliant gyms. The aim is to develop machine learning algorithms that address data center problems and to fairly evaluate solutions again traditional techniques."

license = "Apache-2.0"

authors = [
    "Fabian Ruffy",
    "Michael Przystupa",
    "Ivan Beschastnikh"
]

readme = 'README.md'

repository = "https://github.com/dc_gym/iroko"
homepage = "https://github.com/dc_gym/iroko"

keywords = ['tcp', 'congestion control', 'reinforcement learning', 'rl', 'data center']

[tool.poetry.dependencies]
python = ">=3.6.1"  # Compatible python versions
toml = "^0.9"
numpy = "1.17.*"
pandas = "1.1.*"
gym = "0.12.*"
seaborn = "0.11.*"
matplotlib = "3.3.**"
gevent = "21.1.*"
ray = "1.3.*"
opencv-python = "4.5.*"
tabulate = "0.8.*"
dm-tree = "0.1.6"
tensorflow-probability = "0.12.*"
tensorboardX = "2.2"
tensorflow = "2.2.*"
absl-py = "0.12"
lz4 = "3.1"
psutil = "5.7.*"
setproctitle = "1.1.*"
